--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,16 @@ on:
 
 
 
-      
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+
+    steps:
+      - name: 'before'
+        run: ls
+
+      - uses: actions/checkout@v3
+
+      - name: 'after'
+        run: ls  
