--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: 'login'
-        run: docker login --username salma0sama --password dckr_pat_u9MYbn0l4yp6VwNNCw9LP9kNbzY
+        run: docker login --username ${{ secrets.USERNAME }} --password ${{ secrets.TOKEN }}
